[package]
name = "env-loader"
version = "0.1.0"
edition = "2024"

[features]
default = []
aws = ["aws-config", "tokio", "aws-sdk-ssm", "aws-sdk-secretsmanager"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.15"

aws-config = { version = "1.8.6", features = ["behavior-version-latest"], optional = true }
tokio = {version = "1", features = ["full"], optional = true}
aws-sdk-secretsmanager = { version = "1.87.0", optional = true }
aws-sdk-ssm = { version = "1.92.0", optional = true }
jmespath = "0.4.0"